# KinshipDiagram

./: README.md
code/: CMakeLists.txt  KinshipDiagramEditor.qmlproject  KinshipDiagramEditor.qmlproject.qtds  deepin.astylerc  qmlmodules
code/content/: AddPerson.qml  AddProtagonist.qml  App.qml  CMakeLists.txt  CanvasByBlood.qml  CanvasByPath.qml  ChildrenSorting.qml  Connections.qml  Cropping.qml  HelpInfo.qml  LineEdit.qml  LoadByBlood.js  MainPageForm.qml  NewProject.qml  PersonForm.qml  Settings.qml  StartProject.qml  YinYangSwitch.qml
code/i18n/: KinshipDiagramApp_zh-CN.ts  KinshipDiagramApp_zh-TW.ts
code/imports/: CMakeLists.txt
code/imports/KinshipDiagramEditor/: CMakeLists.txt  qmldir
code/imports/KinshipDiagramEditor/designer/: plugin.metainfo
code/installer/windows/NSIS/: KinshipDiagram.nsi
code/resources/: Logo.psb  inch-frame.psb
code/src/: Config.cpp  Config.h  FileUtils.cpp  FileUtils.h  PersonDB.cpp  PersonDB.h  SettingsManager.cpp  SettingsManager.h  import_qml_plugins.h  main.cpp
docs/: KD-test-cases-0.1a1.xlsm  KD-test-cases-0.1a2.xlsm  KD-test-report-0.1a1-20250509-1635.xlsm  ToDo.md  UserManual.html  UserManual.md  to_do.md  to_zh-TW.py  user_manual_zh-CN.html  user_manual_zh-CN.md  user_manual_zh-TW.html  user_manual_zh-TW.md  产品详细设计文档.md  概要设计.md  测试用例.xlsx  称谓.md
examples/红楼梦-贾府/: 红楼梦-贾府.sqlite3
